--- a/src/main/resources/com/client/fxml/homeSubPanes/homeEmp.fxml
+++ b/src/main/resources/com/client/fxml/homeSubPanes/homeEmp.fxml
@@ -30,22 +30,24 @@
       <Pane id="leftPane" mouseTransparent="true" GridPane.rowSpan="2147483647" />
       <TableView fx:id="table" prefWidth="200.0" GridPane.rowIndex="2">
          <columns>
-            <TableColumn fx:id="firstNameColumn" prefWidth="75.0" text="Imie" />
-            <TableColumn fx:id="lastNameColumn" prefWidth="75.0" text="Nazwisko" />
+            <TableColumn fx:id="firstNameColumn" onEditCommit="#editFirstName" prefWidth="75.0" text="Imie" />
+            <TableColumn fx:id="lastNameColumn" onEditCommit="#editLastName" prefWidth="75.0" text="Nazwisko" />
+             <TableColumn fx:id="jobColumn" onEditCommit="#editJob" prefWidth="75.0" text="Tytul" />
          </columns>
          <GridPane.margin>
             <Insets bottom="20.0" left="20.0" right="20.0" />
          </GridPane.margin>
          <columnResizePolicy>
             <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
-         </columnResizePolicy></TableView>
+         </columnResizePolicy>
+      </TableView>
       <Label id="personLabel" fx:id="testLabel" text="Wybierz osobę z listy" GridPane.columnIndex="1" GridPane.columnSpan="2147483647" GridPane.halignment="CENTER" GridPane.rowIndex="1" GridPane.valignment="CENTER" />
       <Label id="mainLabel" prefHeight="50.0" text="Pracownicy" GridPane.halignment="CENTER" GridPane.valignment="CENTER">
          <GridPane.margin>
             <Insets top="10.0" />
          </GridPane.margin>
       </Label>
-      <HBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="32.0" prefWidth="282.0" GridPane.halignment="CENTER" GridPane.rowIndex="1" GridPane.valignment="CENTER">
+      <HBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="32.0" prefWidth="386.0" GridPane.halignment="CENTER" GridPane.rowIndex="1" GridPane.valignment="CENTER">
          <children>
             <TextField fx:id="searchFilter" maxHeight="-Infinity" maxWidth="-Infinity" prefHeight="32.0" prefWidth="240.0" promptText="Filter" styleClass="textField" />
             <Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" prefHeight="32.0" prefWidth="32.0">
@@ -54,6 +56,32 @@
                   <ImageView fitHeight="26.0" fitWidth="26.0" layoutX="3.0" layoutY="3.0" mouseTransparent="true" pickOnBounds="true" preserveRatio="true">
                      <image>
                         <Image url="@../../img/rubber.png" />
+                     </image>
+                  </ImageView>
+               </children>
+               <HBox.margin>
+                  <Insets left="10.0" />
+               </HBox.margin>
+            </Pane>
+            <Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" prefHeight="32.0" prefWidth="32.0">
+               <children>
+                  <Button id="resetButton" minHeight="32.0" minWidth="32.0" mnemonicParsing="false" onAction="#newEmployee" prefHeight="32.0" prefWidth="32.0" />
+                  <ImageView fitHeight="26.0" fitWidth="26.0" layoutX="3.0" layoutY="3.0" mouseTransparent="true" pickOnBounds="true" preserveRatio="true">
+                     <image>
+                        <Image url="@../../img/addEmp.png" />
+                     </image>
+                  </ImageView>
+               </children>
+               <HBox.margin>
+                  <Insets left="30.0" />
+               </HBox.margin>
+            </Pane>
+            <Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" prefHeight="32.0" prefWidth="32.0">
+               <children>
+                  <Button id="resetButton" minHeight="32.0" minWidth="32.0" mnemonicParsing="false" onAction="#delEmployee" prefHeight="32.0" prefWidth="32.0" />
+                  <ImageView fitHeight="26.0" fitWidth="26.0" layoutX="3.0" layoutY="3.0" mouseTransparent="true" pickOnBounds="true" preserveRatio="true">
+                     <image>
+                        <Image url="@../../img/delEmp.png" />
                      </image>
                   </ImageView>
                </children>
