--- a/src/main/resources/com/client/fxml/homeSubPanes/homeAddEmp.fxml
+++ b/src/main/resources/com/client/fxml/homeSubPanes/homeAddEmp.fxml
@@ -1,21 +1,90 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ChoiceBox?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.PasswordField?>
+<?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
+<?import javafx.scene.layout.Pane?>
 <?import javafx.scene.layout.RowConstraints?>
 
-<GridPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="640.0" prefWidth="1280.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.client.controllers.HomeAddEmpController">
+<GridPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="640.0" prefWidth="1280.0" stylesheets="@../../css/homeAddEmp.css" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.client.controllers.HomeAddEmpController">
   <columnConstraints>
-    <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-    <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+    <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" percentWidth="20.0" prefWidth="100.0" />
+      <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+      <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+      <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+    <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" percentWidth="20.0" prefWidth="100.0" />
   </columnConstraints>
   <rowConstraints>
-    <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-    <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-    <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+    <RowConstraints minHeight="10.0" percentHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+      <RowConstraints minHeight="10.0" prefHeight="80.0" vgrow="SOMETIMES" />
+      <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+      <RowConstraints minHeight="10.0" prefHeight="20.0" vgrow="SOMETIMES" />
+      <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+      <RowConstraints minHeight="10.0" prefHeight="20.0" vgrow="SOMETIMES" />
+      <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+    <RowConstraints minHeight="10.0" prefHeight="20.0" vgrow="SOMETIMES" />
+      <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+    <RowConstraints minHeight="10.0" prefHeight="20.0" vgrow="SOMETIMES" />
+      <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+      <RowConstraints minHeight="10.0" prefHeight="70.0" vgrow="SOMETIMES" />
   </rowConstraints>
    <children>
-      <Label text="addemp screen" GridPane.rowIndex="1" />
+      <Pane id="topPane" prefHeight="200.0" prefWidth="200.0" stylesheets="@../../css/homeAddEmp.css" GridPane.columnSpan="2147483647" />
+      <Label id="mainLabel" alignment="CENTER" text="Nowa osoba" textFill="WHITE" GridPane.columnIndex="2" GridPane.halignment="CENTER" GridPane.valignment="CENTER" />
+      <TextField fx:id="name" styleClass="field" GridPane.columnIndex="1" GridPane.rowIndex="2" GridPane.valignment="TOP" />
+      <TextField fx:id="surname" styleClass="field" GridPane.columnIndex="1" GridPane.rowIndex="4" GridPane.valignment="TOP" />
+      <TextField fx:id="serialNumber" styleClass="field" GridPane.columnIndex="1" GridPane.rowIndex="6" GridPane.valignment="TOP" />
+      <TextField fx:id="login" styleClass="field" GridPane.columnIndex="3" GridPane.rowIndex="2" GridPane.valignment="TOP" />
+      <Label styleClass="formLabel" text="Imie" GridPane.columnIndex="1" GridPane.halignment="LEFT" GridPane.rowIndex="1" GridPane.valignment="BOTTOM">
+         <GridPane.margin>
+            <Insets bottom="3.0" />
+         </GridPane.margin>
+      </Label>
+      <Label styleClass="formLabel" text="Nazwisko" GridPane.columnIndex="1" GridPane.halignment="LEFT" GridPane.rowIndex="3" GridPane.valignment="BOTTOM">
+         <GridPane.margin>
+            <Insets bottom="3.0" />
+         </GridPane.margin>
+      </Label>
+      <Label styleClass="formLabel" text="Pesel" GridPane.columnIndex="1" GridPane.halignment="LEFT" GridPane.rowIndex="5" GridPane.valignment="BOTTOM">
+         <GridPane.margin>
+            <Insets bottom="3.0" />
+         </GridPane.margin>
+      </Label>
+      <Label styleClass="formLabel" text="Tytuł" GridPane.columnIndex="1" GridPane.halignment="LEFT" GridPane.rowIndex="7" GridPane.valignment="BOTTOM">
+         <GridPane.margin>
+            <Insets bottom="3.0" />
+         </GridPane.margin>
+      </Label>
+      <Label styleClass="formLabel" text="Płeć" GridPane.columnIndex="1" GridPane.halignment="LEFT" GridPane.rowIndex="9" GridPane.valignment="BOTTOM">
+         <GridPane.margin>
+            <Insets bottom="3.0" />
+         </GridPane.margin>
+      </Label>
+      <Label styleClass="formLabel" text="Login" GridPane.columnIndex="3" GridPane.halignment="LEFT" GridPane.rowIndex="1" GridPane.valignment="BOTTOM">
+         <GridPane.margin>
+            <Insets bottom="3.0" />
+         </GridPane.margin>
+      </Label>
+      <Label styleClass="formLabel" text="Hasło" GridPane.columnIndex="3" GridPane.halignment="LEFT" GridPane.rowIndex="3" GridPane.valignment="BOTTOM">
+         <GridPane.margin>
+            <Insets bottom="3.0" />
+         </GridPane.margin>
+      </Label>
+      <Button id="acceptButton" fx:id="acceptButton" focusTraversable="false" minHeight="70.0" mnemonicParsing="false" onAction="#addUser" prefHeight="200.0" prefWidth="400.0" text="Akceptuj" GridPane.columnIndex="3" GridPane.rowIndex="10" />
+      <Label styleClass="formLabel" text="Uprawnienia" GridPane.columnIndex="3" GridPane.halignment="LEFT" GridPane.rowIndex="5" GridPane.valignment="BOTTOM">
+         <GridPane.margin>
+            <Insets bottom="3.0" />
+         </GridPane.margin>
+      </Label>
+      <ChoiceBox fx:id="jobChoiceBox" focusTraversable="false" prefWidth="256.0" styleClass="field" GridPane.columnIndex="1" GridPane.rowIndex="8" GridPane.valignment="TOP" />
+      <ChoiceBox fx:id="genderChoiceBox" focusTraversable="false" prefWidth="256.0" styleClass="field" GridPane.columnIndex="1" GridPane.rowIndex="10" GridPane.valignment="TOP" />
+      <ChoiceBox fx:id="adminChoiceBox" focusTraversable="false" prefWidth="256.0" styleClass="field" GridPane.columnIndex="3" GridPane.rowIndex="6" GridPane.valignment="TOP" />
+      <PasswordField fx:id="password" styleClass="field" GridPane.columnIndex="3" GridPane.rowIndex="4" GridPane.valignment="TOP" />
+      <Label fx:id="errorLabel" styleClass="formLabel" text="Label" visible="false" GridPane.columnIndex="3" GridPane.rowIndex="8" />
    </children>
 </GridPane>
