--- a/src/main/resources/com/client/css/homeEmp.css
+++ b/src/main/resources/com/client/css/homeEmp.css
@@ -7,10 +7,21 @@
     -fx-border-color: #c6c6c6;
     -fx-border-radius: 10;
 }
+#infoPane2 {
+    -fx-background-color:linear-gradient(to bottom, #909090, #707070);
+    -fx-background-radius: 10;
+
+    -fx-border-radius: 10;
+}
 #mainLabel {
     -fx-font-family: 'Lato';
     -fx-font-size: 36px;
     -fx-text-fill: white;
+}
+.scheArea {
+    -fx-text-fill:white;
+    -fx-font-family: 'Lato';
+    -fx-font-size: 16px;
 }
 .textField {
     -fx-background-radius: 10;
@@ -45,6 +56,12 @@
 }
 .column-header-background {
 -fx-background-radius: 8px;
+}
+
+#scheduleLabel
+{
+    -fx-font-size:28px;
+    
 }
 
 #personLabel {
