--- a/src/main/resources/com/client/fxml/homeSubPanes/homeEmp.fxml
+++ b/src/main/resources/com/client/fxml/homeSubPanes/homeEmp.fxml
@@ -24,14 +24,16 @@
         <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
     </columnConstraints>
     <rowConstraints>
-        <RowConstraints percentHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+        <RowConstraints percentHeight="10.0" vgrow="SOMETIMES" />
       <RowConstraints percentHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
       <RowConstraints minHeight="10.0" percentHeight="5.0" prefHeight="30.0" vgrow="SOMETIMES" />
-      <RowConstraints minHeight="10.0" percentHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-      <RowConstraints minHeight="10.0" percentHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-      <RowConstraints minHeight="10.0" percentHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-        <RowConstraints prefHeight="30.0" vgrow="SOMETIMES" />
+      <RowConstraints minHeight="10.0" percentHeight="8.0" prefHeight="30.0" vgrow="SOMETIMES" />
+      <RowConstraints minHeight="10.0" percentHeight="8.0" prefHeight="30.0" vgrow="SOMETIMES" />
+      <RowConstraints minHeight="10.0" percentHeight="8.0" prefHeight="30.0" vgrow="SOMETIMES" />
+        <RowConstraints percentHeight="8.0" prefHeight="30.0" vgrow="SOMETIMES" />
+      <RowConstraints percentHeight="5.0" prefHeight="30.0" vgrow="SOMETIMES" />
       <RowConstraints prefHeight="30.0" vgrow="SOMETIMES" />
+      <RowConstraints percentHeight="5.0" prefHeight="30.0" vgrow="SOMETIMES" />
     </rowConstraints>
    <children>
       <Pane id="leftPane" mouseTransparent="true" GridPane.rowSpan="2147483647" />
@@ -98,12 +100,11 @@
             </Pane>
          </children>
       </HBox>
-      <Pane id="infoPane" mouseTransparent="true" style="-fx-view-order: 8;" GridPane.columnIndex="2" GridPane.columnSpan="3" GridPane.rowIndex="3" GridPane.rowSpan="2" />
-      <Label fx:id="job" alignment="CENTER" contentDisplay="CENTER" minHeight="30.0" minWidth="32.0" prefWidth="200.0" styleClass="infoField" text="Tytuł" GridPane.columnIndex="2" GridPane.halignment="CENTER" GridPane.rowIndex="3" />
-      <Label fx:id="login" alignment="CENTER" focusTraversable="false" prefWidth="200.0" styleClass="infoField" text="Login" visible="false" GridPane.columnIndex="2" GridPane.halignment="CENTER" GridPane.rowIndex="4" GridPane.valignment="CENTER" />
-      <Label fx:id="gender" alignment="CENTER" prefWidth="200.0" styleClass="infoField" text="Płeć" GridPane.columnIndex="3" GridPane.halignment="CENTER" GridPane.rowIndex="3" />
-      <Label fx:id="serialNumber" alignment="CENTER" focusTraversable="false" prefWidth="200.0" styleClass="infoField" text="PESEL" visible="false" GridPane.columnIndex="3" GridPane.halignment="CENTER" GridPane.rowIndex="4" />
-      <Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" prefHeight="48.0" prefWidth="48.0" GridPane.columnIndex="4" GridPane.halignment="CENTER" GridPane.rowIndex="3" GridPane.rowSpan="2">
+      <Label fx:id="job" alignment="CENTER" contentDisplay="CENTER" minHeight="30.0" minWidth="32.0" prefWidth="200.0" styleClass="infoField" text="Tytuł" GridPane.columnIndex="2" GridPane.halignment="CENTER" GridPane.rowIndex="4" />
+      <Label fx:id="login" alignment="CENTER" focusTraversable="false" prefWidth="200.0" styleClass="infoField" text="********" GridPane.columnIndex="2" GridPane.halignment="CENTER" GridPane.rowIndex="5" GridPane.valignment="CENTER" />
+      <Label fx:id="gender" alignment="CENTER" prefWidth="200.0" styleClass="infoField" text="Płeć" GridPane.columnIndex="3" GridPane.halignment="CENTER" GridPane.rowIndex="4" />
+      <Label fx:id="serialNumber" alignment="CENTER" focusTraversable="false" prefWidth="200.0" styleClass="infoField" text="********" GridPane.columnIndex="3" GridPane.halignment="CENTER" GridPane.rowIndex="5" />
+      <Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" prefHeight="48.0" prefWidth="48.0" GridPane.columnIndex="4" GridPane.halignment="CENTER" GridPane.rowIndex="3" GridPane.rowSpan="3">
          <children>
             <Button fx:id="lockButton" disable="true" focusTraversable="false" minHeight="48.0" minWidth="48.0" mnemonicParsing="false" onAction="#lock" prefHeight="48.0" prefWidth="48.0" styleClass="resetButton" />
             <ImageView fx:id="padlockC" fitHeight="32.0" fitWidth="32.0" layoutX="8.0" layoutY="8.0" mouseTransparent="true" pickOnBounds="true" preserveRatio="true">
@@ -118,5 +119,32 @@
             </ImageView>
          </children>
       </Pane>
+      <Label fx:id="name" alignment="CENTER" contentDisplay="CENTER" prefWidth="200.0" styleClass="infoField" text="Imię" GridPane.columnIndex="2" GridPane.halignment="CENTER" GridPane.rowIndex="3" />
+      <Label fx:id="surname" alignment="CENTER" contentDisplay="CENTER" prefWidth="200.0" styleClass="infoField" text="Imię" GridPane.columnIndex="3" GridPane.halignment="CENTER" GridPane.rowIndex="3" />
+      <Label id="scheduleLabel" alignment="CENTER" prefWidth="200.0" styleClass="infoField" text="Plan:" GridPane.columnIndex="3" GridPane.halignment="CENTER" GridPane.rowIndex="6" />
+      <Pane id="infoPane2" prefHeight="200.0" prefWidth="200.0" style="-fx-view-order: 5;" GridPane.columnIndex="1" GridPane.columnSpan="2147483647" GridPane.rowIndex="6" GridPane.rowSpan="2147483647">
+         <GridPane.margin>
+            <Insets bottom="10.0" left="10.0" right="10.0" />
+         </GridPane.margin>
+      </Pane>
+      <Label alignment="CENTER" prefWidth="200.0" styleClass="infoField" text="Poniedziałek" GridPane.columnIndex="1" GridPane.rowIndex="7" />
+      <Label alignment="CENTER" prefWidth="200.0" styleClass="infoField" text="Wtorek" GridPane.columnIndex="2" GridPane.rowIndex="7" />
+      <Label alignment="CENTER" prefWidth="200.0" styleClass="infoField" text="Środa" GridPane.columnIndex="3" GridPane.rowIndex="7" />
+      <Label alignment="CENTER" prefWidth="200.0" styleClass="infoField" text="Czwartek" GridPane.columnIndex="4" GridPane.rowIndex="7" />
+      <Label alignment="CENTER" contentDisplay="CENTER" prefWidth="200.0" styleClass="infoField" text="Piątek" GridPane.columnIndex="5" GridPane.rowIndex="7" />
+      <Pane id="infoPane" mouseTransparent="true" style="-fx-view-order: 8;" GridPane.columnIndex="2" GridPane.columnSpan="3" GridPane.rowIndex="3" GridPane.rowSpan="4" />
+      <Label alignment="CENTER" prefHeight="400.0" prefWidth="200.0" styleClass="scheArea" text="Label" GridPane.columnIndex="1" GridPane.rowIndex="8">
+         <padding>
+            <Insets left="10.0" />
+         </padding>
+      </Label>
+      <Label alignment="CENTER" prefHeight="400.0" prefWidth="200.0" styleClass="scheArea" text="Label" GridPane.columnIndex="2" GridPane.rowIndex="8" />
+      <Label alignment="CENTER" prefHeight="400.0" prefWidth="200.0" styleClass="scheArea" text="Label" GridPane.columnIndex="3" GridPane.rowIndex="8" />
+      <Label alignment="CENTER" prefHeight="400.0" prefWidth="200.0" styleClass="scheArea" text="Label" GridPane.columnIndex="4" GridPane.rowIndex="8" />
+      <Label alignment="CENTER" prefHeight="400.0" prefWidth="200.0" styleClass="scheArea" text="Label" GridPane.columnIndex="5" GridPane.rowIndex="8">
+         <padding>
+            <Insets right="10.0" />
+         </padding>
+      </Label>
    </children>
 </GridPane>
